v5.1.0/_sources/generated/pcdsdevices.mirror.Pitch.rst.txt
pcdsdevices.mirror.Pitch
========================

.. currentmodule:: pcdsdevices.mirror

.. autoclass:: Pitch

    
    
    .. list-table:: Ophyd Device Components
        :header-rows: 1
        :widths: auto

        * - Attribute
          - Class
          - Suffix
          - Docs
          - Kind
          - Notes
    
        * - readback
          - :class:`~ophyd.signal.EpicsSignalRO`
          - ``:RBV``
          - 
          - hinted
          - Inherited from :class:`~pcdsdevices.mirror.OMMotor`
    
        * - setpoint
          - :class:`~ophyd.signal.EpicsSignal`
          - ``:VAL``
          - 
          - normal
          - Inherited from :class:`~pcdsdevices.mirror.OMMotor`
    
        * - done
          - :class:`~ophyd.signal.EpicsSignalRO`
          - ``:DMOV``
          - 
          - omitted
          - Inherited from :class:`~pcdsdevices.mirror.OMMotor`
    
        * - motor_egu
          - :class:`~ophyd.signal.EpicsSignal`
          - ``:RBV.EGU``
          - 
          - omitted
          - Inherited from :class:`~pcdsdevices.mirror.OMMotor`
    
        * - interlock
          - :class:`~ophyd.signal.EpicsSignalRO`
          - ``:INTERLOCK``
          - 
          - omitted
          - Inherited from :class:`~pcdsdevices.mirror.OMMotor`
    
        * - enabled
          - :class:`~ophyd.signal.EpicsSignalRO`
          - ``:ENABLED``
          - 
          - omitted
          - Inherited from :class:`~pcdsdevices.mirror.OMMotor`
    
        * - low_limit_switch
          - :class:`~ophyd.signal.EpicsSignalRO`
          - ``:LLS``
          - 
          - omitted
          - Inherited from :class:`~pcdsdevices.mirror.OMMotor`
    
        * - high_limit_switch
          - :class:`~ophyd.signal.EpicsSignalRO`
          - ``:HLS``
          - 
          - omitted
          - Inherited from :class:`~pcdsdevices.mirror.OMMotor`
    
        * - piezo_volts (FCpt)
          - :class:`~ophyd.signal.EpicsSignalRO`
          - ``{self._piezo}:VRBV``
          - 
          - normal
          - 
    
        * - stop_signal (FCpt)
          - :class:`~ophyd.signal.EpicsSignal`
          - ``{self._piezo}:STOP``
          - 
          - omitted
          - 
    

    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    

    
    

    
    
    .. rubric:: Methods

    
    .. automethod:: camonitor
    .. automethod:: configure
    .. automethod:: describe
    .. automethod:: end_monitor_thread
    .. automethod:: get
    .. automethod:: move
    .. automethod:: mv
    .. automethod:: mv_ginput
    .. automethod:: mvr
    .. automethod:: read
    .. automethod:: read_configuration
    .. automethod:: set
    .. automethod:: set_position
    .. automethod:: status
    .. automethod:: stop
    .. automethod:: summary
    .. automethod:: trigger
    .. automethod:: tweak
    .. automethod:: umv
    .. automethod:: umvr
    .. automethod:: wait
    .. automethod:: wm
    .. automethod:: wm_update
    
    

    
    
    .. rubric:: Attributes

    
    .. autoattribute:: actuate
    .. autoattribute:: actuate_value
    .. autoattribute:: configuration_attrs
    .. autoattribute:: connected
    .. autoattribute:: done_value
    .. autoattribute:: egu
    .. autoattribute:: high_limit
    .. autoattribute:: hints
    .. autoattribute:: kind
    .. autoattribute:: limits
    .. autoattribute:: low_limit
    .. autoattribute:: moving
    .. autoattribute:: position
    .. autoattribute:: put_complete
    .. autoattribute:: settle_time
    .. autoattribute:: stop_value
    .. autoattribute:: timeout
    
    